Visible product items

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Fish market</title>
 </head>
 <body>
 <div id="container"></div>
 <script src="./app.js"></script>
+<link rel="stylesheet" type="text/css" href="styles.css" />
 </body>
 </html>
