--- a/cart.html
+++ b/cart.html
@@ -12,7 +12,7 @@
 <body>
   <section class="products">
     <article class="product">
-      <img src="img/fish.png" width="263" height="180" alt="">
+      <img src="static/images/fish.png" width="263" height="180" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -26,7 +26,7 @@
       </div>
     </article>
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -41,7 +41,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -56,7 +56,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -71,7 +71,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -86,7 +86,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -101,7 +101,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -116,7 +116,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -131,7 +131,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -146,7 +146,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -161,7 +161,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -176,7 +176,7 @@
     </article>
 
     <article class="product">
-      <img src="img/fish.png" alt="">
+      <img src="static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
