--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Fish market</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/cart.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/simple-line-icons.css">
 </head>
 <body>
 <div id="container"></div>
