--- a/designs/coded/cart.html
+++ b/designs/coded/cart.html
@@ -4,15 +4,15 @@
   <meta charset="utf-8">
   <title>Market</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/cart.css">
-  <link rel="stylesheet" href="css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/simple-line-icons.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/cart.css">
+  <link rel="stylesheet" href="./css/font-awesome.min.css">
+  <link rel="stylesheet" href="./css/simple-line-icons.css">
 </head>
 <body>
   <section class="products">
     <article class="product">
-      <img src="static/images/fish.png" width="263" height="180" alt="">
+      <img src="./static/images/fish.png" width="263" height="180" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -26,7 +26,7 @@
       </div>
     </article>
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -41,7 +41,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -56,7 +56,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -71,7 +71,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -86,7 +86,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -101,7 +101,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -116,7 +116,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -131,7 +131,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -146,7 +146,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -161,7 +161,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
@@ -176,7 +176,7 @@
     </article>
 
     <article class="product">
-      <img src="static/images/fish.png" alt="">
+      <img src="../../src/static/images/fish.png" alt="">
       <span class="product__name">Tuna</span>
       <div class="product__info">
         <h1 class="product__title">Lorem ipsum Dolor sit amet</h1>
