--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Fish market</title>
+    <title>Fish market 2</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script type="text/javascript">
       (function(l) {
